--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,8 +8,8 @@ repos:
     hooks:
       - id: black
         name: fmt
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.4.0
+-   repo: https://gitlab.com/pycqa/flake8
+    rev: 3.8.3
     hooks:
     -   id: flake8
 -   repo: https://github.com/pre-commit/mirrors-mypy
